docs/api/qiskit/0.19/qiskit.aqua.algorithms.MinimumEigensolverResult.mdx
---
title: MinimumEigensolverResult (v0.19)
description: API reference for qiskit.aqua.algorithms.MinimumEigensolverResult in qiskit v0.19
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.MinimumEigensolverResult
---

# MinimumEigensolverResult

<Class id="qiskit.aqua.algorithms.MinimumEigensolverResult" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.7/qiskit/aqua/algorithms/minimum_eigen_solvers/minimum_eigen_solver.py" signature="MinimumEigensolverResult(a_dict=None)" modifiers="class">
  Minimum Eigensolver Result.

  ## Attributes

  <span id="minimumeigensolverresult-aux-operator-eigenvalues" />

  ### aux\_operator\_eigenvalues

  <Attribute id="qiskit.aqua.algorithms.MinimumEigensolverResult.aux_operator_eigenvalues" attributeTypeHint="Union[None, numpy.ndarray]">
    return aux operator eigen values

    **Return type**

    `Optional`\[`ndarray`]
  </Attribute>

  <span id="minimumeigensolverresult-eigenstate" />

  ### eigenstate

  <Attribute id="qiskit.aqua.algorithms.MinimumEigensolverResult.eigenstate" attributeTypeHint="Union[None, numpy.ndarray]">
    return eigen state

    **Return type**

    `Optional`\[`ndarray`]
  </Attribute>

  <span id="minimumeigensolverresult-eigenvalue" />

  ### eigenvalue

  <Attribute id="qiskit.aqua.algorithms.MinimumEigensolverResult.eigenvalue" attributeTypeHint="Union[None, float]">
    returns eigen value

    **Return type**

    `Optional`\[`float`]
  </Attribute>

  ## Methods

  <span id="minimumeigensolverresult-getitem" />

  ### \_\_getitem\_\_

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.__getitem__" signature="MinimumEigensolverResult.__getitem__(key)">
    **Return type**

    `object`
  </Function>

  <span id="minimumeigensolverresult-len" />

  ### \_\_len\_\_

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.__len__" signature="MinimumEigensolverResult.__len__()" />

  <span id="minimumeigensolverresult-clear" />

  ### clear

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.clear" signature="MinimumEigensolverResult.clear()">
    **Return type**

    `None`
  </Function>

  <span id="minimumeigensolverresult-combine" />

  ### combine

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.combine" signature="MinimumEigensolverResult.combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>

  <span id="minimumeigensolverresult-copy" />

  ### copy

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.copy" signature="MinimumEigensolverResult.copy()" />

  <span id="minimumeigensolverresult-from-dict" />

  ### from\_dict

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.from_dict" signature="MinimumEigensolverResult.from_dict(a_dict)" modifiers="static">
    create new object from a dictionary

    **Return type**

    [`MinimumEigensolverResult`](qiskit.aqua.algorithms.MinimumEigensolverResult "qiskit.aqua.algorithms.minimum_eigen_solvers.minimum_eigen_solver.MinimumEigensolverResult")
  </Function>

  <span id="minimumeigensolverresult-fromkeys" />

  ### fromkeys

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.fromkeys" signature="MinimumEigensolverResult.fromkeys(iterable, value=None)" modifiers="classmethod" />

  <span id="minimumeigensolverresult-get" />

  ### get

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.get" signature="MinimumEigensolverResult.get(k[, d]) → D[k] if k in D, else d.  d defaults to None." />

  <span id="minimumeigensolverresult-items" />

  ### items

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.items" signature="MinimumEigensolverResult.items() → a set-like object providing a view on D’s items" />

  <span id="minimumeigensolverresult-keys" />

  ### keys

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.keys" signature="MinimumEigensolverResult.keys() → a set-like object providing a view on D’s keys" />

  <span id="minimumeigensolverresult-pop" />

  ### pop

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.pop" signature="MinimumEigensolverResult.pop(key, default=None)">
    If key is not found, d is returned if given, otherwise KeyError is raised.

    **Return type**

    `object`
  </Function>

  <span id="minimumeigensolverresult-popitem" />

  ### popitem

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.popitem" signature="MinimumEigensolverResult.popitem()">
    as a 2-tuple; but raise KeyError if D is empty.

    **Return type**

    `Tuple`\[`object`, `object`]
  </Function>

  <span id="minimumeigensolverresult-setdefault" />

  ### setdefault

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.setdefault" signature="MinimumEigensolverResult.setdefault(k[, d]) → D.get(k,d), also set D[k]=d if k not in D" />

  <span id="minimumeigensolverresult-update" />

  ### update

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.update" signature="MinimumEigensolverResult.update(*args, **kwargs)">
    If E present and has a .keys() method, does: for k in E: D\[k] = E\[k] If E present and lacks .keys() method, does: for (k, v) in E: D\[k] = v In either case, this is followed by: for k, v in F.items(): D\[k] = v

    **Return type**

    `None`
  </Function>

  <span id="minimumeigensolverresult-values" />

  ### values

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.values" signature="MinimumEigensolverResult.values() → an object providing a view on D’s values" />
</Class>

