docs/api/qiskit/0.24/qiskit.aqua.algorithms.MinimumEigensolverResult.mdx
---
title: MinimumEigensolverResult
description: API reference for qiskit.aqua.algorithms.MinimumEigensolverResult
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.aqua.algorithms.MinimumEigensolverResult
---

<span id="qiskit-aqua-algorithms-minimumeigensolverresult" />

# qiskit.aqua.algorithms.MinimumEigensolverResult

<Class id="qiskit.aqua.algorithms.MinimumEigensolverResult" isDedicatedPage={true} github="https://github.com/qiskit-community/qiskit-aqua/tree/stable/0.8/qiskit/aqua/algorithms/minimum_eigen_solvers/minimum_eigen_solver.py" signature="MinimumEigensolverResult(a_dict=None)">
  Minimum Eigensolver Result.

  ### \_\_init\_\_

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.__init__" name="__init__" signature="__init__(a_dict=None)">
    Initialize self. See help(type(self)) for accurate signature.
  </Function>

  ## Methods

  |                                                                                                                                                  |                                                                                                                                                                                                                      |
  | ------------------------------------------------------------------------------------------------------------------------------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
  | [`__init__`](#qiskit.aqua.algorithms.MinimumEigensolverResult.__init__ "qiskit.aqua.algorithms.MinimumEigensolverResult.__init__")(\[a\_dict])   | Initialize self.                                                                                                                                                                                                     |
  | [`clear`](#qiskit.aqua.algorithms.MinimumEigensolverResult.clear "qiskit.aqua.algorithms.MinimumEigensolverResult.clear")()                      | **rtype**`None`                                                                                                                                                                                                      |
  | [`combine`](#qiskit.aqua.algorithms.MinimumEigensolverResult.combine "qiskit.aqua.algorithms.MinimumEigensolverResult.combine")(result)          | Any property from the argument that exists in the receiver is updated.                                                                                                                                               |
  | `copy`()                                                                                                                                         |                                                                                                                                                                                                                      |
  | [`from_dict`](#qiskit.aqua.algorithms.MinimumEigensolverResult.from_dict "qiskit.aqua.algorithms.MinimumEigensolverResult.from_dict")(a\_dict)   | create new object from a dictionary                                                                                                                                                                                  |
  | `fromkeys`(iterable\[, value])                                                                                                                   |                                                                                                                                                                                                                      |
  | [`get`](#qiskit.aqua.algorithms.MinimumEigensolverResult.get "qiskit.aqua.algorithms.MinimumEigensolverResult.get")(k\[,d])                      |                                                                                                                                                                                                                      |
  | [`items`](#qiskit.aqua.algorithms.MinimumEigensolverResult.items "qiskit.aqua.algorithms.MinimumEigensolverResult.items")()                      |                                                                                                                                                                                                                      |
  | [`keys`](#qiskit.aqua.algorithms.MinimumEigensolverResult.keys "qiskit.aqua.algorithms.MinimumEigensolverResult.keys")()                         |                                                                                                                                                                                                                      |
  | [`pop`](#qiskit.aqua.algorithms.MinimumEigensolverResult.pop "qiskit.aqua.algorithms.MinimumEigensolverResult.pop")(key\[, default])             | If key is not found, d is returned if given, otherwise KeyError is raised.                                                                                                                                           |
  | [`popitem`](#qiskit.aqua.algorithms.MinimumEigensolverResult.popitem "qiskit.aqua.algorithms.MinimumEigensolverResult.popitem")()                | as a 2-tuple; but raise KeyError if D is empty.                                                                                                                                                                      |
  | [`setdefault`](#qiskit.aqua.algorithms.MinimumEigensolverResult.setdefault "qiskit.aqua.algorithms.MinimumEigensolverResult.setdefault")(k\[,d]) |                                                                                                                                                                                                                      |
  | [`update`](#qiskit.aqua.algorithms.MinimumEigensolverResult.update "qiskit.aqua.algorithms.MinimumEigensolverResult.update")(\*args, \*\*kwargs) | If E present and has a .keys() method, does: for k in E: D\[k] = E\[k] If E present and lacks .keys() method, does: for (k, v) in E: D\[k] = v In either case, this is followed by: for k, v in F.items(): D\[k] = v |
  | [`values`](#qiskit.aqua.algorithms.MinimumEigensolverResult.values "qiskit.aqua.algorithms.MinimumEigensolverResult.values")()                   |                                                                                                                                                                                                                      |

  ## Attributes

  |                                                                                                                                                                                    |                                  |
  | ---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | -------------------------------- |
  | [`aux_operator_eigenvalues`](#qiskit.aqua.algorithms.MinimumEigensolverResult.aux_operator_eigenvalues "qiskit.aqua.algorithms.MinimumEigensolverResult.aux_operator_eigenvalues") | return aux operator eigen values |
  | [`eigenstate`](#qiskit.aqua.algorithms.MinimumEigensolverResult.eigenstate "qiskit.aqua.algorithms.MinimumEigensolverResult.eigenstate")                                           | return eigen state               |
  | [`eigenvalue`](#qiskit.aqua.algorithms.MinimumEigensolverResult.eigenvalue "qiskit.aqua.algorithms.MinimumEigensolverResult.eigenvalue")                                           | returns eigen value              |

  ### aux\_operator\_eigenvalues

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.aux_operator_eigenvalues" name="aux_operator_eigenvalues" signature="property aux_operator_eigenvalues">
    return aux operator eigen values

    **Return type**

    `Optional`\[`ndarray`]
  </Function>

  ### clear

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.clear" name="clear" signature="clear()">
    **Return type**

    `None`
  </Function>

  ### combine

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.combine" name="combine" signature="combine(result)">
    Any property from the argument that exists in the receiver is updated. :type result: `AlgorithmResult` :param result: Argument result with properties to be set.

    **Raises**

    **TypeError** – Argument is None

    **Return type**

    `None`
  </Function>

  ### eigenstate

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.eigenstate" name="eigenstate" signature="property eigenstate">
    return eigen state

    **Return type**

    `Optional`\[`ndarray`]
  </Function>

  ### eigenvalue

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.eigenvalue" name="eigenvalue" signature="property eigenvalue">
    returns eigen value

    **Return type**

    `Optional`\[`complex`]
  </Function>

  ### from\_dict

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.from_dict" name="from_dict" signature="static from_dict(a_dict)">
    create new object from a dictionary

    **Return type**

    `MinimumEigensolverResult`
  </Function>

  ### get

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.get" name="get" signature="get(k[, d]) → D[k] if k in D, else d. d defaults to None." />

  ### items

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.items" name="items" signature="items() → a set-like object providing a view on D’s items" />

  ### keys

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.keys" name="keys" signature="keys() → a set-like object providing a view on D’s keys" />

  ### pop

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.pop" name="pop" signature="pop(key, default=None)">
    If key is not found, d is returned if given, otherwise KeyError is raised.

    **Return type**

    `object`
  </Function>

  ### popitem

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.popitem" name="popitem" signature="popitem()">
    as a 2-tuple; but raise KeyError if D is empty.

    **Return type**

    `Tuple`\[`object`, `object`]
  </Function>

  ### setdefault

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.setdefault" name="setdefault" signature="setdefault(k[, d]) → D.get(k,d), also set D[k]=d if k not in D" />

  ### update

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.update" name="update" signature="update(*args, **kwargs)">
    If E present and has a .keys() method, does: for k in E: D\[k] = E\[k] If E present and lacks .keys() method, does: for (k, v) in E: D\[k] = v In either case, this is followed by: for k, v in F.items(): D\[k] = v

    **Return type**

    `None`
  </Function>

  ### values

  <Function id="qiskit.aqua.algorithms.MinimumEigensolverResult.values" name="values" signature="values() → an object providing a view on D’s values" />
</Class>

